Fix scrollbar issue and prepare for deployment

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body,
 html {
   height: 100%;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .App {
@@ -28,7 +28,7 @@ html {
 }
 
 .background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -721,7 +721,6 @@ html {
   transition: transform 0.35s cubic-bezier(0.65, 0, 0.35, 1);
   z-index: 2;
   transform: translateX(0);
-  overflow-y: auto;
   padding-bottom: 40px;
 }
 
